# ooodnakov-config

./: .env.example  .envrc  .gitignore  .markdownlint.json  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  TODO.md  bootstrap.sh  completions-todo.md  deps.lock.json  justfile  parse_error.py  parse_ps1.py  pyproject.toml  run_pwsh.py  run_pwsh_test.py  test.ps1  test2.ps1  test3.ps1  test_parse.ps1  todo_style.md  unitodo.md
.Jules/: palette.md
.claude/: settings.local.json
.github/workflows/: ci.yml  release.yml  (+2 more)
.jules/: sentinel.md
docs/: agents-config-research.md  architecture.md  ci-smoke-checks-terminal.md  cli-extension-guide.md  contributing.md  dependency-decisions.md  dependency-lock.md  reproducibility.md  symlink-manifest.md  troubleshooting.md
home/: .gitconfig  .zshrc
scripts/: agents-tool.py  agents_tool.py  autogen-completions.txt  cli_ui.py  delete.ps1  delete.sh  generate-dependency-lock.py  generate_dependency_lock.py  generate_oooconf_completions.py  link_manager.py  links.toml  minimal-setup.sh  oooconf-cli-spec.toml  oooconf-commands.txt  oooconf_cli_spec.py  ooodnakov.ps1  ooodnakov.sh  optional-deps.toml  read_optional_deps.py  render-secrets.py  render_secrets.py  setup.ps1  setup.sh  sync_color_theme.py  update-pins.py  update-pins.sh  update_pins.py
tests/: test_agents_tool.py  test_cli_ui_resolution.py  test_generate_dependency_lock.py  test_link_manager.py  test_optional_deps.py  test_optional_deps_drift.py  test_powershell.ps1  test_recursive_completions.py  test_shell.sh  test_static_smoke.py  test_sync_color_theme.py
(+244 files in other folders)
