[project]
name = "ooodnakov-config"
version = "0.1.0"
description = "Cross-platform dotfiles repository — Python helper scripts for secrets and dependency management"
requires-python = ">=3.12"
dependencies = []

[tool.uv]

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]

[tool.ruff]
target-version = "py312"
line-length = 120
extend-exclude = ["third_party"]

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
